test/sema/trait_objects/dereference_pointer_to_trait_object.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait A {}

fn main() {
  let x: *impl A;

  // CHECK: [[# @LINE + 1 ]]:4: error: cannot dereference pointer to trait object
  *x;
}
